# boldiweb

./: .gitignore  LICENSE  album-boldialbum.toml  album-boldibest.toml  album-emesefriends.toml  album-kovacsfamily.toml  album-palotasfamily.toml  boldibuild.py  boldiweb.py  masonry.py  pyproject.toml  requirements.txt
templates/: index.html  index.html.j2  masonry.html.j2  thumbnail.html
templates/static/: script.js  style.css
