[project]
name = "boldiweb"
version = "0.0.1"
dependencies = [
    "Jinja2",
    "marko",
    "Pillow",
    "pydantic",
    "PyExifTool",
    "Unidecode",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
]

[tool.setuptools.packages]
find = {}

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
